--- a/myApp/www/templates/immersion.html
+++ b/myApp/www/templates/immersion.html
@@ -2,41 +2,41 @@
     <ion-content padding="true" class="has-header">
 
         <ion-list id="immersion-list4" class=" ">
-          <h1 class="categoryHeading" style="color:#000000;" class=" ">Youtube Channels</h1>
-          <ion-item id="immersion-list-item11" class="  " ng-repeat="Link in Links |filter:{category: 'youtubeChannel'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
+          <a><h1 class="categoryHeading" style="color:#000000;" class=" " ng-click="youtubeChannelsChange()">Youtube Channels</h1></a>
+          <ion-item id="immersion-list-item11" class="  " ng-show="youtubeChannelsShow" ng-repeat="Link in Links |filter:{category: 'youtubeChannel'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
 
-          <h1 class="categoryHeading" style="color:#000000;" class=" ">Movies</h1>
-          <ion-item id="immersion-list-item12" class="  " ng-repeat="Link in Links |filter:{category: 'movies'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
+          <a><h1 class="categoryHeading" style="color:#000000;" class=" " ng-click="moviesChange()">Movies</h1></a>
+          <ion-item id="immersion-list-item12" class="  " ng-show="moviesShow" ng-repeat="Link in Links |filter:{category: 'movies'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
 
-          <h1 class="categoryHeading" style="color:#000000;" class=" ">Comedy</h1>
-          <ion-item id="immersion-list-item14" class="  " ng-repeat="Link in Links |filter:{category: 'comedy'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
+          <a><h1 class="categoryHeading" style="color:#000000;" class=" " ng-click="comedyChange()">Comedy</h1></a>
+          <ion-item id="immersion-list-item14" class="  " ng-show="comedyShow" ng-repeat="Link in Links |filter:{category: 'comedy'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
 
-          <h1 class="categoryHeading" style="color:#000000;" class=" ">Music</h1>
-          <ion-item id="immersion-list-item15" class="  " ng-repeat="Link in Links |filter:{category: 'music'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
+          <a><h1 class="categoryHeading" style="color:#000000;" class=" " ng-click="musicChange()">Music</h1></a>
+          <ion-item id="immersion-list-item15" class="  " ng-show="musicShow" ng-repeat="Link in Links |filter:{category: 'music'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
 
-          <h1 class="categoryHeading" style="color:#000000;" class=" ">Talks</h1>
-          <ion-item id="immersion-list-item16" class="  " ng-repeat="Link in Links |filter:{category: 'talks'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
+          <a><h1 class="categoryHeading" style="color:#000000;" class=" " ng-click="talksChange()">Talks</h1></a>
+          <ion-item id="immersion-list-item16" class="  " ng-show="talksShow" ng-repeat="Link in Links |filter:{category: 'talks'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
 
-          <h1 class="categoryHeading" style="color:#000000;" class=" ">Podcasts</h1>
-          <ion-item id="immersion-list-item17" class="  " ng-repeat="Link in Links |filter:{category: 'podcasts'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
+          <a><h1 class="categoryHeading" style="color:#000000;" class=" " ng-click="podcastsChange()">Podcasts</h1></a>
+          <ion-item id="immersion-list-item17" class="  " ng-show="podcastsShow" ng-repeat="Link in Links |filter:{category: 'podcasts'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
 
-          <h1 class="categoryHeading" style="color:#000000;" class=" ">Books</h1>
-          <ion-item id="immersion-list-item18" class="  " ng-repeat="Link in Links |filter:{category: 'books'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
+          <a><h1 class="categoryHeading" style="color:#000000;" class=" " ng-click="booksChange()">Books</h1></a>
+          <ion-item id="immersion-list-item18" class="  " ng-show="booksShow" ng-repeat="Link in Links |filter:{category: 'books'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
 
-          <h1 class="categoryHeading" style="color:#000000;" class=" ">Culture & Art</h1>
-          <ion-item id="immersion-list-item19" class="  " ng-repeat="Link in Links |filter:{category: 'cultureArt'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
+          <a><h1 class="categoryHeading" style="color:#000000;" class=" " ng-click="cultureChange()">Culture & Art</h1></a>
+          <ion-item id="immersion-list-item19" class="  " ng-show="cultureShow" ng-repeat="Link in Links |filter:{category: 'cultureArt'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
 
-          <h1 class="categoryHeading" style="color:#000000;" class=" ">Blogs</h1>
-          <ion-item id="immersion-list-item20" class="  " ng-repeat="Link in Links |filter:{category: 'blogs'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
+          <a><h1 class="categoryHeading" style="color:#000000;" class=" " ng-click="blogsChange()">Blogs</h1></a>
+          <ion-item id="immersion-list-item20" class="  " ng-show="blogsShow" ng-repeat="Link in Links |filter:{category: 'blogs'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
 
-          <h1 class="categoryHeading" style="color:#000000;" class=" ">Martial Arts</h1>
-          <ion-item id="immersion-list-item21" class="  " ng-repeat="Link in Links |filter:{category: 'martialArts'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
+          <a><h1 class="categoryHeading" style="color:#000000;" class=" " ng-click="martialChange()">Martial Arts</h1></a>
+          <ion-item id="immersion-list-item21" class="  " ng-show="martialShow" ng-repeat="Link in Links |filter:{category: 'martialArts'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
 
-          <h1 class="categoryHeading" style="color:#000000;" class=" ">Philosophy</h1>
-          <ion-item id="immersion-list-item22" class="  " ng-repeat="Link in Links |filter:{category: 'philosophy'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
+          <a><h1 class="categoryHeading" style="color:#000000;" class=" " ng-click="philosophyChange()">Philosophy</h1></a>
+          <ion-item id="immersion-list-item22" class="  " ng-show="philosophyShow" ng-repeat="Link in Links |filter:{category: 'philosophy'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
 
-          <h1 class="categoryHeading" style="color:#000000;" class=" ">Other</h1>
-          <ion-item id="immersion-list-item23" class="  " ng-repeat="Link in Links |filter:{category: 'other'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
+          <a><h1 class="categoryHeading" style="color:#000000;" class=" " ng-click="otherChange()">Other</h1></a>
+          <ion-item id="immersion-list-item23" class="  " ng-show="otherShow" ng-repeat="Link in Links |filter:{category: 'other'}"> <a ng-href="{{Link.link}}">{{Link.title}}</a> <br>{{Link.description}}</ion-item>
 
         </ion-list>
     </ion-content>
