--- a/myApp/www/templates/about.html
+++ b/myApp/www/templates/about.html
@@ -1,8 +1,21 @@
 <ion-view title="About" id="page10" class=" ">
     <ion-content padding="true" class="has-header">
-        <h1 id="about-heading5" style="color:#000000;" class=" ">Heading</h1>
-        <p id="about-markdown3" style="color:#000000;" class=" ">Some friendly
-            <strong>markdown</strong>
-        </p>
+      <h1>Impressum</h1>
+
+      <h3>Gesetzliche Anbieterkennung:</h3>
+      <ul>
+        <li>Georg Westner</li>
+        <li>Kampenwandstr. 11</li>
+        <li>83083 Riedering</li>
+        <li>Deutschland</li>
+        <li>Telefon: 08036 3642</li>
+        <li>E-Mail: georg.westner@googlemail.com</li>
+      </ul>
+      Rechtliche Hinweise zur Webseite
+
+      Alle Texte, Bilder und weiter hier veröffentlichten Informationen unterliegen dem Urheberrecht des Anbieters, soweit nicht Urheberrechte Dritter bestehen. In jedem Fall ist eine Vervielfältigung, Verbreitung oder öffentliche Wiedergabe ausschließlich im Falle einer widerruflichen und nicht übertragbaren Zustimmung des Anbieters gestattet.
+
+      Für alle mittels Querverweis (Link) verbundenen Webinhalte übernimmt der Anbieter keine Verantwortung, da es sich hierbei nicht um eigene Inhalte handelt. Die verlinkten Seiten wurden auf rechtswidrige Inhalte überprüft, zum Zeitpunkt der Verlinkung waren solche nicht erkennbar. Verantwortlich für den Inhalt der verlinkten Seiten ist deren Betreiber. Der Anbieter hat hierzu keine allgemeine Überwachungs- und Prüfungspflicht. Bei Bekanntwerden einer Rechtsverletzung wird der entsprechende Link jedoch umgehend entfernt.
+
     </ion-content>
 </ion-view>
