--- a/myApp/www/templates/home.html
+++ b/myApp/www/templates/home.html
@@ -4,9 +4,8 @@
         <p id="home-markdown1" style="color:#000000;" class=" ">Some friendly
             <strong>markdown</strong>
         </p>
-      jgjhg
         <div style="margin: 0px; line-height: 250px; text-align: center; background-color: rgb(232, 235, 239);">
-            <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
+            <img src="../images/man-person-village-house.jpg" style=" width: 100%; font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;">
         </div>
     </ion-content>
 </ion-view>
