--- a/myApp/www/templates/settings.html
+++ b/myApp/www/templates/settings.html
@@ -2,15 +2,13 @@
   <ion-content padding="true" class="has-header">
     <form id="quiz-form4" class="list ">
       <label class="item item-select " id="quiz-select3">
-        <span class="input-label">Chapter</span>
+        <span class="input-label">Language</span>
         <select ng-model="langKey" ng-change="changeLanguage(langKey)">
           <option value="de" >Deutsch</option>
-          <option value="en" selected>English</option>
-          <option value="en" selected></option>
+          <option value="en">English</option>
           </select>
       </label>
     </form>
 
-    <button id="quiz-button9" class=" button button-positive  button-block ">Turn Card</button>
   </ion-content>
 </ion-view>
