--- a/myApp/www/templates/settings.html
+++ b/myApp/www/templates/settings.html
@@ -2,7 +2,7 @@
   <ion-content padding="true" class="has-header">
     <form id="quiz-form4" class="list ">
       <label class="item item-select " id="quiz-select3">
-        <span class="input-label">Language</span>
+        <span class="input-label">{{'SETTINGS.LANGUAGE_ID' | translate}}</span>
         <select ng-model="langKey" ng-change="changeLanguage(langKey)">
           <option value="de" >Deutsch</option>
           <option value="en">English</option>
