--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -11,20 +11,18 @@
   </ion-side-menu-content>
   <ion-side-menu side="left" id="sidemenu">
     <ion-header-bar class="bar-stable">
-      <div class="title">Menu</div>
+      <div class="title">{{'MENU.MENU_ID' | translate}}</div>
     </ion-header-bar>
     <ion-content padding="false" class="side-menu-left has-header">
       <ion-list id="menu-list3" class=" ">
-        <ion-item id="menu-list-item1" href="#/app/home" menu-close="" class="  ">Home</ion-item>
-        <ion-item id="menu-list-item2" href="#/app/flashcards" menu-close="" class="  ">Flashcards</ion-item>
-        <ion-item id="menu-list-item4" href="#/app/immersion" menu-close="" class="  ">Immersion</ion-item>
-        <ion-item id="menu-list-item5" href="#/app/quiz" menu-close="" class="  ">Quiz</ion-item>
-        <ion-item class="item-icon-left  " id="menu-list-item3" href="#/app/account" menu-close="">
-          <i class="icon ion-ios-person-outline"></i>Account</ion-item>
+        <ion-item id="menu-list-item1" href="#/app/home" menu-close="" class="  ">{{'MENU.HOME_ID' | translate}}</ion-item>
+        <ion-item id="menu-list-item2" href="#/app/flashcards" menu-close="" class="  ">{{'MENU.FLASHCARDS_ID' | translate}}</ion-item>
+        <ion-item id="menu-list-item4" href="#/app/immersion" menu-close="" class="  ">{{'MENU.IMMERSION_ID' | translate}}</ion-item>
+        <ion-item id="menu-list-item5" href="#/app/quiz" menu-close="" class="  ">{{'MENU.QUIZ_ID' | translate}}</ion-item>
         <ion-item class="item-icon-left  " id="menu-list-item6" href="#/app/about" menu-close="">
-          <i class="icon ion-information"></i>About</ion-item>
+          <i class="icon ion-information"></i>{{'MENU.ABOUT_ID' | translate}}</ion-item>
         <ion-item class="item-icon-left  " id="menu-list-item10" href="#/app/settings" menu-close="">
-          <i class="icon ion-ios-cog-outline"></i>Settings</ion-item>
+          <i class="icon ion-ios-cog-outline"></i>{{'MENU.SETTINGS_ID' | translate}}</ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
