--- a/myApp/www/templates/settings.html
+++ b/myApp/www/templates/settings.html
@@ -4,8 +4,8 @@
       <label class="item item-select " id="quiz-select3">
         <span class="input-label">{{'SETTINGS.LANGUAGE_ID' | translate}}</span>
         <select ng-model="langKey" ng-change="changeLanguage(langKey)">
-          <option value="de" >Deutsch</option>
-          <option value="en">English</option>
+          <option value="de">Deutsch</option>
+          <option value="en" selected="true">English</option>
           </select>
       </label>
     </form>
