--- a/myApp/www/templates/quiz.html
+++ b/myApp/www/templates/quiz.html
@@ -4,7 +4,7 @@
             <label class="item item-select " id="quiz-select3">
                 <span class="input-label">{{'QUIZ.CHAPTER_ID' | translate}}</span>
                 <select ng-model="chapter" ng-change="takeOverChapter(chapter)">
-                    <option value=" ">{{'QUIZ.ALL_ID' | translate}}</option>
+                    <option value="All">{{'QUIZ.ALL_ID' | translate}}</option>
                     <option value="1">{{'QUIZ.1_ID' | translate}}</option>
                     <option value="2">{{'QUIZ.2_ID' | translate}}</option>
                     <option value="3">{{'QUIZ.3_ID' | translate}}</option>
