changeLanguage bug fixed

--- a/myApp/www/templates/settings.html
+++ b/myApp/www/templates/settings.html
@@ -5,7 +5,7 @@
         <span class="input-label">{{'SETTINGS.LANGUAGE_ID' | translate}}</span>
         <select ng-model="langKey" ng-change="changeLanguage(langKey)">
           <option value="de">Deutsch</option>
-          <option value="en" selected="true">English</option>
+          <option value="en" selected="">English</option>
           </select>
       </label>
     </form>
