--- a/myApp/www/templates/flashcards.html
+++ b/myApp/www/templates/flashcards.html
@@ -17,7 +17,7 @@
             </label>
             <div class="spacer" style="width: 300px; height: 19px;"></div>
             <label class="item item-input " id="flashcards-input6">
-                <span class="input-label">{{'FLASHCARDTABLE.SEARCH_ID' | translate}}</span>
+                <i class="icon ion-search placeholder-icon"></i>
                 <input type="text" placeholder="" class="query" ng-model="search">
             </label>
             <div class="spacer" style="width: 300px; height: 19px;"></div>
