--- a/myApp/www/templates/account.html
+++ b/myApp/www/templates/account.html
@@ -1,4 +1,4 @@
-<ion-view title="Account" hide-back-button="true" id="page9" class=" ">
+<ion-view title="{{'MENU.ACCOUNT_ID' | translate}}" hide-back-button="true" id="page9" class=" ">
     <ion-content padding="true" class="has-header">
         <h1 id="account-heading4" style="color:#000000;" class=" ">Heading</h1>
         <p id="account-markdown2" style="color:#000000;" class=" ">Some friendly
