--- a/myApp/www/templates/immersion.html
+++ b/myApp/www/templates/immersion.html
@@ -1,4 +1,4 @@
-<ion-view title="Immersion" hide-back-button="true" id="page7" class=" ">
+<ion-view title="{{'MENU.IMMERSION_ID' | translate}}" hide-back-button="true" id="page7" class=" ">
     <ion-content padding="true" class="has-header">
 
         <ion-list id="immersion-list4" class=" ">
