--- a/myApp/www/templates/settings.html
+++ b/myApp/www/templates/settings.html
@@ -1,4 +1,4 @@
-<ion-view title="Settings" hide-back-button="true" id="page8" class=" ">
+<ion-view title="{{'MENU.SETTINGS_ID' | translate}}" hide-back-button="true" id="page8" class=" ">
   <ion-content padding="true" class="has-header">
     <form id="quiz-form4" class="list ">
       <label class="item item-select " id="quiz-select3">
