--- a/myApp/www/templates/about.html
+++ b/myApp/www/templates/about.html
@@ -1,5 +1,12 @@
-<ion-view title="About" id="page10" class=" ">
+<ion-view title="{{'MENU.ABOUT_ID' | translate}}" id="page10" class=" ">
     <ion-content padding="true" class="has-header">
+
+      I am a Webdeveloper from Germany.
+      Please message me on links@journeytochinatown.com if you have any content that you want to share with other people!
+
+      <br>
+      <br>
+
       <h1>Impressum</h1>
 
       <h3>Gesetzliche Anbieterkennung:</h3>
