--- a/myApp/www/templates/menu.html
+++ b/myApp/www/templates/menu.html
@@ -23,6 +23,8 @@
           <i class="icon ion-information"></i>{{'MENU.ABOUT_ID' | translate}}</ion-item>
         <ion-item class="item-icon-left  " id="menu-list-item10" href="#/app/settings" menu-close="">
           <i class="icon ion-ios-cog-outline"></i>{{'MENU.SETTINGS_ID' | translate}}</ion-item>
+        <ion-item class="item-icon-left  " id="menu-list-item11" href="#/app/feedback" menu-close="">
+          <i class="icon ion-paper-airplane"></i>{{'MENU.FEEDBACK_ID' | translate}}</ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
