--- a/myApp/www/templates/quiz.html
+++ b/myApp/www/templates/quiz.html
@@ -1,4 +1,5 @@
 <ion-view title="{{'MENU.QUIZ_ID' | translate}}" hide-back-button="true" id="page8" class=" ">
+  <link href="../styles/quiz.css" rel="stylesheet">
     <ion-content padding="true" class="has-header">
         <form id="quiz-form4" class="list ">
             <label class="item item-select " id="quiz-select3">
