--- a/myApp/www/templates/about.html
+++ b/myApp/www/templates/about.html
@@ -1,4 +1,4 @@
-<ion-view title="{{'MENU.ABOUT_ID' | translate}}" id="page10" class=" ">
+<ion-view title="{{'MENU.ABOUT_ID' | translate}}" hide-back-button="true" id="page10" class=" ">
     <ion-content padding="true" class="has-header">
 
       <h1>Impressum</h1>
