--- a/myApp/www/templates/feedback.html
+++ b/myApp/www/templates/feedback.html
@@ -1,6 +1,6 @@
 <ion-view title="{{'MENU.FEEDBACK_ID' | translate}}" hide-back-button="true" id="page11" class=" ">
     <ion-content padding="true" class="has-header">
-      <form action="https://formspree.io/links@journeytochinatown.com"
+      <form target="_blank" action="https://formspree.io/links@journeytochinatown.com"
             method="POST">
         <br>
         <label class="item item-input " id="feedback-textarea3">
