--- a/myApp/www/templates/flashcards.html
+++ b/myApp/www/templates/flashcards.html
@@ -4,7 +4,7 @@
         <form id="flashcards-form3" class="list ">
             <label class="item item-select " id="flashcards-select1">
                 <span class="input-label">{{'FLASHCARDTABLE.CHAPTER_ID' | translate}}</span>
-                <select ng-init=""> ng-model="chapterSelection">
+                <select ng-init="" ng-model="chapterSelection">
                     <option value="">{{'FLASHCARDTABLE.ALL_ID' | translate}}</option>
                     <option value="1">{{'FLASHCARDTABLE.1_ID' | translate}}</option>
                     <option value="2">{{'FLASHCARDTABLE.2_ID' | translate}}</option>
@@ -14,6 +14,12 @@
                     <option value="6">{{'FLASHCARDTABLE.6_ID' | translate}}</option>
                     <option value="7">{{'FLASHCARDTABLE.7_ID' | translate}}</option>
                     <option value="8">{{'FLASHCARDTABLE.8_ID' | translate}}</option>
+                    <option value="9">{{'FLASHCARDTABLE.9_ID' | translate}}</option>
+                    <option value="10">{{'QUIZ.10_ID' | translate}}</option>
+                    <option value="11">{{'QUIZ.11_ID' | translate}}</option>
+                    <option value="12">{{'QUIZ.12_ID' | translate}}</option>
+                    <option value="13">{{'QUIZ.13_ID' | translate}}</option>
+                    <option value="14">{{'QUIZ.14_ID' | translate}}</option>
                 </select>
             </label>
             <div class="spacer" style="width: 300px; height: 19px;"></div>
