--- a/myApp/www/templates/settings.html
+++ b/myApp/www/templates/settings.html
@@ -3,10 +3,10 @@
     <form id="quiz-form4" class="list ">
       <label class="item item-select " id="quiz-select3">
         <span class="input-label">{{'SETTINGS.LANGUAGE_ID' | translate}}</span>
-        <select ng-init="en" ng-model="langKey" ng-change="changeLanguage(langKey)">
-          <option value="de">Deutsch</option>
+        <select ng-init="langKey='en'" ng-model="langKey" ng-change="changeLanguage(langKey)">
           <option value="en" selected="">English</option>
-          </select>
+          <option value="de">Deutsch</option>
+        </select>
       </label>
     </form>
 
