--- a/myApp/www/templates/about.html
+++ b/myApp/www/templates/about.html
@@ -1,6 +1,7 @@
-<ion-view title="{{'MENU.ABOUT_ID' | translate}}" hide-back-button="true" id="page10" class=" ">
+<ion-view title="{{'MENU.ABOUT_ID' | translate}}" hide-back-button="true" id="about" class="page" ng-cloak>
     <ion-content padding="true" class="has-header">
 
+      <div id="impressum">
       <h1>Impressum</h1>
 
       <h3>Gesetzliche Anbieterkennung:</h3>
@@ -17,6 +18,8 @@
       Alle Texte, Bilder und weiter hier veröffentlichten Informationen unterliegen dem Urheberrecht des Anbieters, soweit nicht Urheberrechte Dritter bestehen. In jedem Fall ist eine Vervielfältigung, Verbreitung oder öffentliche Wiedergabe ausschließlich im Falle einer widerruflichen und nicht übertragbaren Zustimmung des Anbieters gestattet.
 
       Für alle mittels Querverweis (Link) verbundenen Webinhalte übernimmt der Anbieter keine Verantwortung, da es sich hierbei nicht um eigene Inhalte handelt. Die verlinkten Seiten wurden auf rechtswidrige Inhalte überprüft, zum Zeitpunkt der Verlinkung waren solche nicht erkennbar. Verantwortlich für den Inhalt der verlinkten Seiten ist deren Betreiber. Der Anbieter hat hierzu keine allgemeine Überwachungs- und Prüfungspflicht. Bei Bekanntwerden einer Rechtsverletzung wird der entsprechende Link jedoch umgehend entfernt.
+
+      </div>
 
     </ion-content>
 </ion-view>
