--- a/myApp/www/templates/feedback.html
+++ b/myApp/www/templates/feedback.html
@@ -1,4 +1,4 @@
-<ion-view title="{{'MENU.FEEDBACK_ID' | translate}}" hide-back-button="true" id="page11" class=" ">
+<ion-view title="{{'MENU.FEEDBACK_ID' | translate}}" hide-back-button="true" id="feedback" class="page">
     <ion-content padding="true" class="has-header">
       <form target="_blank" action="https://formspree.io/links@journeytochinatown.com"
             method="POST">
