--- a/myApp/www/styles/index.css
+++ b/myApp/www/styles/index.css
@@ -26,13 +26,21 @@ a:link{
     a:active {
         color:black;
     }
+#sidemenu{
+  background-color: #BEEB9F;
+}
 
+.page {
+  background-color: #363F45;
+}
+
+#impressum {
+  background-color: white;
+}
 @media screen and (min-width: 720px){
   .list {
   }
 
-  #sidemenu{
-    background-color: #77C8CF;
-  }
+
 }
 
