--- a/myApp/www/templates/flashcards.html
+++ b/myApp/www/templates/flashcards.html
@@ -1,4 +1,4 @@
-<ion-view title="{{'MENU.FLASHCARDS_ID' | translate}}" id="page2" class=" ">
+<ion-view title="{{'MENU.FLASHCARDS_ID' | translate}}" id="flashcards" class="page" ng-cloak>
   <link href="../styles/flashcard.css" rel="stylesheet">
     <ion-content padding="true" class="has-header">
         <form id="flashcards-form3" class="list ">
