--- a/myApp/www/templates/quiz.html
+++ b/myApp/www/templates/quiz.html
@@ -1,4 +1,4 @@
-<ion-view title="{{'MENU.QUIZ_ID' | translate}}" hide-back-button="true" id="page8" class=" " ng-cloak>
+<ion-view title="{{'MENU.QUIZ_ID' | translate}}" hide-back-button="true" id="quiz" class="page" ng-cloak>
   <link href="../styles/quiz.css" rel="stylesheet">
     <ion-content padding="true" class="has-header">
         <form id="quiz-form4" class="list ">
@@ -28,7 +28,7 @@
             <button id="quiz-button8" class=" button button-positive  button-block " ng-click="Add()">{{'QUIZ.NEXT_ID' | translate}}</button>
         </div>
         <div class="list card " id="quiz-card" >
-            <ion-card class="character" ng-show="Cards[index].characterShow" style="font-size: 8em;"><p>{{Cards[index].character}}</p></ion-card>
+            <ion-card class="character" ng-show="Cards[index].characterShow" style="font-size: 8em;"><br><p>{{Cards[index].character}}</p><br></ion-card>
             <ion-item class="  " ng-show="Cards[index].pinyinShow == false" style="font-size: 2em;">{{Cards[index].pinyin}}</ion-item>
 
             <div ng-show="Cards[index].translationShow == false">
