--- a/myApp/www/templates/about.html
+++ b/myApp/www/templates/about.html
@@ -11,7 +11,7 @@
         <li>83083 Riedering</li>
         <li>Deutschland</li>
         <li>Telefon: 08036 3642</li>
-        <li>E-Mail: georg.westner@googlemail.com</li>
+        <li>E-Mail: info@journeytochinatown.com</li>
       </ul>
       Rechtliche Hinweise zur Webseite
 
