desktop view design added

--- a/myApp/www/templates/android/flashcards.html
+++ b/myApp/www/templates/android/flashcards.html
@@ -1,5 +1,5 @@
 <ion-view title="{{'MENU.FLASHCARDS_ID' | translate}}" id="flashcards" class="page" ng-cloak>
-  <link href="../styles/flashcard.css" rel="stylesheet">
+  <link href="../../styles/android/flashcard.css" rel="stylesheet">
     <ion-content padding="true" class="has-header">
         <form id="flashcards-form3" class="list ">
             <label class="item item-select " id="flashcards-select1">
