--- a/myApp/www/styles/index.css
+++ b/myApp/www/styles/index.css
@@ -3,6 +3,11 @@
 /////////////////////////////////////////////////////////////////////////////////*/
 
 body{
+@font-face {
+  font-family: "KaiTi";
+  src: url("../fonts/KaiTi.ttf");
+}
+
   font-family: 'Raleway', sans-serif, "KaiTi", "楷体", STKaiti, "华文楷体", serif;
 }
 
@@ -38,9 +43,6 @@ a:link{
   background-color: white;
 }
 @media screen and (min-width: 720px){
-  .list {
-  }
-
 
 }
 
