--- a/myApp/www/templates/android/quiz.html
+++ b/myApp/www/templates/android/quiz.html
@@ -1,5 +1,5 @@
 <ion-view title="{{'MENU.QUIZ_ID' | translate}}" hide-back-button="true" id="quiz" class="page" ng-cloak>
-  <link href="../styles/quiz.css" rel="stylesheet">
+  <link href="../../styles/android/quiz.css" rel="stylesheet">
     <ion-content padding="true" class="has-header">
         <form id="quiz-form4" class="list ">
             <label class="item item-select " id="quiz-select3">
